crates/keron-lang/tests/corpus/errors/parse/struct_decl_missing_field_type.keron
struct Point { x: Int, y }
